tests/transpiler/x/hs/str_builtin.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/str_builtin.hs:7:12: error:
    Variable not in scope: str :: t0 -> a0
  |
7 |     print (str 123)
  |            ^^^
